# context-compressor-md

./: AGENTS.md  IDEA.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
src/context_compressor_md/: __init__.py  cli.py  compressor.py
tests/: test_compressor.py
