[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "context-compressor-md"
version = "0.1.0"
description = "Compress your agent's knowledge base by 10x without losing reasoning power"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Avasis AI", email = "contact@avasis.ai" }
]
maintainers = [
    { name = "Avasis AI", email = "contact@avasis.ai" }
]
keywords = [
    "ai",
    "context",
    "compression",
    "optimization",
    "token",
    "llm",
    "prompt",
    "compression",
    "efficiency"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "tiktoken>=0.5",
    "numpy>=1.24",
    "click>=8.0",
]

[project.urls]
Homepage = "https://github.com/avasis-ai/context-compressor-md"
Documentation = "https://github.com/avasis-ai/context-compressor-md#readme"
Repository = "https://github.com/avasis-ai/context-compressor-md.git"
Issues = "https://github.com/avasis-ai/context-compressor-md/issues"

[project.scripts]
context-compress = "context_compressor_md.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/context_compressor_md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
multi_line_output = 3
